bug fixings for nav alignment

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -90,7 +90,7 @@ nav {
 	position: fixed;
 	display: flex;
 	top: 0;
-	max-width: 900px;
+	width: 900px;
 	text-align: center;
 	background: white;
 	padding: 1rem 0;
@@ -283,6 +283,7 @@ footer span {
 		padding: 0;
 	}
 	nav {
+		width: 100%;
 		position: relative;
 		flex-direction: column;
 	}
